# corepipe

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: pipeline.yml  release.yml  rust.yml
resources/test/: smaps.txt
scripts/: prebuild.sh
src/: bindings.rs  byte_helpers.rs  elfmachine_aarch64.rs  elfmachine_x86_64.rs  linux.rs  main.rs  process_info.rs  process_memory.rs  ptrace.rs  smaps.rs  sysconf.rs  wrapper.h  write_elf.rs
src/include/: gdb-state-size.h  google-coredumper.h
testbins/test-workload/: Cargo.toml
testbins/test-workload/src/: main.rs
tests/: dump_multiple_page.rs  dump_multiple_threads.rs  dump_read.rs  dump_sleep.rs
