[package]
name = "corepipe"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.62.0"

[dev-dependencies]
assert_cmd = "2.0.8"
elf = "0.7.1"
predicates = "2.1.5"
rand = "0.8.5"
subprocess = "0.2.9"
tempfile = "3.3.0"
test-binary = "2.0.0"

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
cty = "0.2.2"
libc = "0.2.138"
libelf-sys = "0.1.0"
nix = "0.26.1"
log = "0.4.17"
once_cell = "1.17.1"
procfs = "0.14.2"
scan_fmt = "0.2.6"
fallible-streaming-iterator = "0.1.9"
thiserror = "1.0.38"
anyhow = "1.0.70"
simple_logger = { version = "4.1.0", features = ["stderr"] }
